# voyages-and-verve

./: .clang-format  .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  CONTRIBUTING.md  LICENSE.txt  Makefile  README.md
res/: cell_factory.json  entity_factory.json
sauce/: app.cpp  app.h  core.h  main.cpp
sauce/render/: render.cpp  render.h  render_utils.h  texture.h
sauce/update/: ai.h  entity.cpp  entity.h  update.cpp  update.h  world.cpp  world.h
sauce/utils/: config.cpp  config.h  datastructures.h  log.cpp  log.h  threadpool.h
sauce/utils/math/: vec2.cpp  vec2.h
sauce/world/: world.cpp  world.h
test/: test.cpp
